# Project

./: .gitignore  DOCKER.md  Proj3.code-workspace  ReadME.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  VECTOR_SEARCH.md  WHY_VECTOR_INDEX.md  pyproject.toml
backend/app/: bot.py  config.py  database.py  main.py
backend/app/models/: department.py  document.py
backend/app/routers/: departments.py  stream.py
backend/app/services/: embeddings.py  rag.py  text_extraction.py  vector_index_service.py
backend/scripts/: verify_vector_index.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: BotJsonCard.tsx  BotMessageBubble.tsx  RealTimeChatPanel.tsx  UserMessageBubble.tsx
frontend/src/hooks/: pipecat-chat-events.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Stream.tsx
frontend/src/types/: BotJson.ts  ChatMessage.ts  Chunk.ts  ServerMessage.ts
frontend/src/utils/: chat.ts
